Adicionando a funcionalidade de excluir um Pet
